--- a/requirements.txt
+++ b/requirements.txt
@@ -9,14 +9,27 @@ asgiref==3.7.2
 django==4.2.3
     # via
     #   -r requirements.in
+    #   django-debug-toolbar
+    #   django-ranged-response
+    #   django-simple-captcha
     #   djangorestframework
+django-debug-toolbar==4.2.0
+    # via -r requirements.in
+django-ranged-response==0.2.0
+    # via django-simple-captcha
+django-simple-captcha==0.5.18
+    # via -r requirements.in
 djangorestframework==3.14.0
     # via -r requirements.in
 pillow==10.0.0
-    # via -r requirements.in
+    # via
+    #   -r requirements.in
+    #   django-simple-captcha
 pytz==2023.3
     # via djangorestframework
 sqlparse==0.4.4
-    # via django
+    # via
+    #   django
+    #   django-debug-toolbar
 tzdata==2023.3
     # via django
