--- a/requirements.txt
+++ b/requirements.txt
@@ -25,6 +25,8 @@ django==4.2.3
     #   django-ranged-response
     #   django-simple-captcha
     #   djangorestframework
+    #   djangorestframework-simplejwt
+    #   djoser
     #   social-auth-app-django
 django-debug-toolbar==4.2.0
     # via -r requirements.in
@@ -32,7 +34,15 @@ django-ranged-response==0.2.0
     # via django-simple-captcha
 django-simple-captcha==0.5.18
     # via -r requirements.in
+django-templated-mail==1.1.1
+    # via djoser
 djangorestframework==3.14.0
+    # via
+    #   -r requirements.in
+    #   djangorestframework-simplejwt
+djangorestframework-simplejwt==5.3.0
+    # via djoser
+djoser==2.2.0
     # via -r requirements.in
 idna==3.4
     # via requests
@@ -47,7 +57,9 @@ pillow==10.0.0
 pycparser==2.21
     # via cffi
 pyjwt==2.8.0
-    # via social-auth-core
+    # via
+    #   djangorestframework-simplejwt
+    #   social-auth-core
 python3-openid==3.2.0
     # via social-auth-core
 pytz==2023.3
@@ -59,7 +71,9 @@ requests==2.31.0
 requests-oauthlib==1.3.1
     # via social-auth-core
 social-auth-app-django==5.2.0
-    # via -r requirements.in
+    # via
+    #   -r requirements.in
+    #   djoser
 social-auth-core==4.4.2
     # via social-auth-app-django
 sqlparse==0.4.4
